feat: Add new landing page sections and animations
Introduces several new sections to the landing page, including testimonials, pricing, FAQs, and a blog page link. Enhances the user experience with smooth scrolling and a subtle testimonial scrolling animation.

Also includes refactors to the `GeneratedImage` component, removing upscaling logic, and updates to the `PoseGallery` to include a new "NEW" category. The `geminiService` has been updated to remove resolution quality parameters from image generation.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       body {
         font-family: 'Inter', sans-serif;
       }
@@ -34,6 +37,22 @@
       .scrollbar-thin {
           scrollbar-width: thin;
           scrollbar-color: #4b5563 #1f2937; /* thumb and track color */
+      }
+
+      /* Testimonial scroll animation */
+      @keyframes scroll-up {
+        from {
+          transform: translateY(0);
+        }
+        to {
+          transform: translateY(-50%);
+        }
+      }
+      .animate-scroll-up {
+        animation: scroll-up 40s linear infinite;
+      }
+      .testimonial-container:hover .animate-scroll-up {
+        animation-play-state: paused;
       }
     </style>
   <script type="importmap">
